feat(*):add commit end ticket phase 1
